--- a/schoolapp/schoolapp.domain/schoolapp.domain.csproj
+++ b/schoolapp/schoolapp.domain/schoolapp.domain.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Events\" />
+    </ItemGroup>
+
 </Project>
