--- a/schoolapp/schoolapp.infrastructure/Infrastructure.csproj
+++ b/schoolapp/schoolapp.infrastructure/Infrastructure.csproj
@@ -17,4 +17,8 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.7" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\schoolapp.application\Application.csproj" />
+    </ItemGroup>
+
 </Project>
