--- a/schoolapp/schoolapp.infrastructure/Infrastructure.csproj
+++ b/schoolapp/schoolapp.infrastructure/Infrastructure.csproj
@@ -21,4 +21,8 @@
       <ProjectReference Include="..\schoolapp.application\Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Persistence\Migrations\" />
+    </ItemGroup>
+
 </Project>
