--- a/schoolapp/schoolapp.infrastructure/schoolapp.infrastructure.csproj
+++ b/schoolapp/schoolapp.infrastructure/schoolapp.infrastructure.csproj
@@ -19,6 +19,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
           <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
     </ItemGroup>
 
     <ItemGroup>
@@ -26,7 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Persistence\Migrations\" />
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
