--- a/schoolapp/schoolapp.webapi/appsettings.json
+++ b/schoolapp/schoolapp.webapi/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SchoolDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=host.docker.internal;Database=schooldb;Username=postgres;Password=Muthuri24;"
+
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SchoolDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
