--- a/schoolapp/schoolapp.webapi/appsettings.Development.json
+++ b/schoolapp/schoolapp.webapi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SchoolDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=host.docker.internal;Database=schooldb;Username=postgres;Password=Muthuri24;"
   },
   "Logging": {
     "LogLevel": {
