--- a/nextapp/package.json
+++ b/nextapp/package.json
@@ -39,6 +39,7 @@
     "@mui/x-data-grid": "^6.11.0",
     "@mui/x-date-pickers": "^6.11.0",
     "@react-pdf/renderer": "^3.1.12",
+    "@reduxjs/toolkit": "^2.2.2",
     "apexcharts": "^3.41.1",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.4.0",
@@ -68,6 +69,7 @@
     "react-markdown": "^8.0.7",
     "react-organizational-chart": "^2.2.1",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.1.0",
     "react-slick": "^0.29.0",
     "rehype-highlight": "^6.0.0",
     "rehype-raw": "^6.1.1",
