--- a/nextapp/package.json
+++ b/nextapp/package.json
@@ -67,6 +67,7 @@
     "react-map-gl": "^7.1.6",
     "react-markdown": "^9.0.1",
     "react-organizational-chart": "^2.2.1",
+    "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
     "rehype-highlight": "^7.0.0",
