--- a/schoolapp/schoolapp.webapi/appsettings.Development.json
+++ b/schoolapp/schoolapp.webapi/appsettings.Development.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=host.docker.internal;Database=schooldb;Username=postgres;Password=Muthuri24;"
+    "DefaultConnection": "Server=DESKTOP-9ON65SB;Database=school_db;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+
+    //"DefaultConnection": "Host=host.docker.internal;Database=schooldb;Username=postgres;Password=Muthuri24;"
   },
   "Logging": {
     "LogLevel": {
