--- a/schoolapp/schoolapp.webapi/appsettings.json
+++ b/schoolapp/schoolapp.webapi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=host.docker.internal;Database=schooldb;Username=postgres;Password=Muthuri24;"
-
+    //"DefaultConnection": "Host=host.docker.internal;Database=schooldb;Username=postgres;Password=Muthuri24;"
+   // "DefaultConnection": "Source=(localdb)\\MSSQLLocalDB;Initial;Catalog=master;Integrated;Security=True;Connect Timeout=30;Encrypt=False;"
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SchoolDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
