--- a/schoolapp/schoolapp.webapi/appsettings.Development.json
+++ b/schoolapp/schoolapp.webapi/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-9ON65SB;Database=school_db;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
-    "PostgresConnection": "Host=localhost;Database=schooldb;Username=simon;Password=Working24;"
+    "PostgresConnection": "Host=localhost;Database=schooldb;Username=postgres;Password=Working24;"
 
     //"DefaultConnection": "Host=host.docker.internal;Database=schooldb;Username=postgres;Password=Muthuri24;"
   },
