--- a/schoolweb/package.json
+++ b/schoolweb/package.json
@@ -19,6 +19,8 @@
     "start:out": "npx serve@latest out -p 3033"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.20.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
