--- a/schoolapp/src/schoolapp.application/schoolapp.application.csproj
+++ b/schoolapp/src/schoolapp.application/schoolapp.application.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <Folder Include="Common\Behaviours\" />
+      <Folder Include="Common\Security\Policies\" />
     </ItemGroup>
 
     <ItemGroup>
