--- a/schoolweb/package.json
+++ b/schoolweb/package.json
@@ -58,6 +58,7 @@
     "lowlight": "^3.1.0",
     "mui-one-time-password-input": "^2.0.2",
     "next": "^14.2.4",
+    "next-cloudinary": "^6.12.0",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
