--- a/schoolapp/src/schoolapp.domain/schoolapp.domain.csproj
+++ b/schoolapp/src/schoolapp.domain/schoolapp.domain.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Entities\Attendance\" />
       <Folder Include="Events\" />
     </ItemGroup>
 
