--- a/schoolapp/src/schoolapp.webapi/appsettings.Development.json
+++ b/schoolapp/src/schoolapp.webapi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-9ON65SB;Database=school_db;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "DefaultConnection": "Server=DESKTOP-9ON65SB;Database=schooldb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
     "PostgresConnection": "Host=localhost;Database=schooldb;Username=postgres;Password=Working24;"
 
     //"DefaultConnection": "Host=host.docker.internal;Database=schooldb;Username=postgres;Password=Muthuri24;"
