--- a/school_front/package.json
+++ b/school_front/package.json
@@ -11,19 +11,12 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
-    "@mui/base": "^5.0.0-beta.67",
-    "@mui/icons-material": "^6.4.1",
-    "@mui/material": "^6.4.1",
-    "@mui/x-date-pickers": "^7.23.3",
-    "@next/font": "^14.2.15",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -34,6 +27,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
@@ -51,8 +45,10 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@radix-ui/themes": "^3.2.1",
     "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-table": "^8.21.2",
     "@tiptap/core": "^2.11.3",
     "@tiptap/extension-font-family": "^2.11.3",
     "@tiptap/extension-heading": "^2.11.3",
@@ -72,8 +68,7 @@
     "framer-motion": "^12.4.1",
     "input-otp": "^1.2.4",
     "lucia": "^3.2.2",
-    "lucide-react": "^0.474.0",
-    "mui-tiptap": "^1.17.1",
+    "lucide-react": "^0.487.0",
     "nanoid": "^5.0.9",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
