--- a/schoolapp/src/schoolapp.webapi/appsettings.Development.json
+++ b/schoolapp/src/schoolapp.webapi/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-9ON65SB;Database=schooldb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
-    "PostgresConnection": "Host=localhost;Database=schooldb;Username=postgres;Password=Working24;"
+    "DefaultConnection": "Host=deshteys.postgres.database.azure.com;Port=5432;Database=shoolapp;Username=postgres;Password=Working25;",
+    "PostgresConnection": "Host=deshteys.postgres.database.azure.com;Port=5432;Database=schooldb;Username=postgres;Password=Working25;"
 
     //"DefaultConnection": "Host=host.docker.internal;Database=schooldb;Username=postgres;Password=Muthuri24;"
   },
