--- a/schoolapp/src/schoolapp.domain/schoolapp.domain.csproj
+++ b/schoolapp/src/schoolapp.domain/schoolapp.domain.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
       <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.8" />
     </ItemGroup>
 
